<resources>
    <string name="app_name">ScreenSpaceApp</string>
    <string name="ScreenSpace">ScreenSpace</string>
    <string name="Bienvenido">¡Bienvenido!</string>
    <string name="CrearCuenta">Crear Cuenta</string>
    <string name="IniciarSesion">Iniciar Sesion</string>
    <string name="IngresarGoogle">Ingresar con Google</string>
    <string name="Back">Back</string>
    <string name="IngreseSuEmailYContrasena">Ingrese su email y contraseña</string>
    <string name="email">Email</string>
    <string name="IngresarEmail">ejemplo@ejemplo.com</string>
    <string name="Contrasena">Contraseña</string>
    <string name="IngresarContrasena">********</string>
    <string name="CuentaCreadaExito">¡Cuenta creada exitosamente!</string>
    <string name="MenuPrincipal">Menu Principal</string>
    <string name="OlvidoContrasena">OLVIDÉ MI CONTRASEÑA</string>
    <string name="CambiarContrasena">Cambiar contraseña</string>
    <string name="ContrasenaCambiada">Se le envió un mail con el cambio de contraseña.</string>
    <string name="Registrarse">Registrarse</string>
    <string name="RegistrarseTexto">Ingrese los datos para crear una nueva cuenta.</string>
    <string name="RecuperoContraseña">Recupero de contraseña</string>
    <string name="EmailEnviado">Email enviado</string>
    <string name="Inicio">Inicio</string>
    <string name="CerrarSesion">Cerrar sesion</string>
    <string name="TusCines">Tus Cines</string>
    <string name="TusSalas">Tus Salas</string>
    <string name="ModificarSalas">Modificar salas</string>
    <string name="Direccion">Direccion</string>
    <string name="Empresa">Empresa</string>
    <string name="Nombre">Nombre</string>
    <string name="PrecioEntrada">Precio entrada</string>
    <string name="DimensionesSala">Dimensiones de la sala</string>
    <string name="Filas">Filas</string>
    <string name="Columnas">Columnas</string>
    <string name="IngreseNombreYFoto">Ingrese su nombre y foto de perfil</string>
    <string name="Actualizar">Actualizar</string>
    <string name="EliminarPerfil">Eliminar perfil</string>
    <string name="PerfilActualizadoExito">Perfil actualizado con exito</string>
</resources>