<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackApp"
    tools:context=".crear_cuenta">

    <TextView
        android:id="@+id/whiteBack2"
        android:layout_width="355dp"
        android:layout_height="520dp"
        android:layout_marginBottom="116dp"
        android:background="@color/whiteApp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:hint="@string/IngresarEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="254dp"
        android:layout_height="62dp"
        android:layout_marginTop="28dp"
        android:text="@string/RegistrarseTexto"
        android:textColor="@color/blackApp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:hint="@string/IngresarContrasena"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/Registrarse"
        android:textColor="@color/blueApp"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/whiteBack2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Contrasena"
        android:textColor="@color/blueApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="63dp"
        android:layout_height="25dp"
        android:layout_marginTop="56dp"
        android:text="@string/email"
        android:textColor="@color/blueApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blueApp"
        android:text="@string/CrearCuenta"
        android:textColor="@color/whiteApp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteBack2" />
</androidx.constraintlayout.widget.ConstraintLayout>