<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blackApp"
    tools:context=".config_cuenta_usuarios">

    <Button
        android:id="@+id/inicio2"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="684dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blueApp"
        android:onClick="Menu"
        android:text="@string/EliminarPerfil"
        android:textColor="@color/whiteApp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inicio3"
        android:layout_width="355dp"
        android:layout_height="65dp"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/redApp"
        android:onClick="Menu"
        android:text="@string/Actualizar"
        android:textColor="@color/whiteApp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/whiteBack5"
        android:layout_width="346dp"
        android:layout_height="537dp"
        android:layout_marginBottom="208dp"
        android:background="@color/whiteApp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="292dp"
        android:layout_height="94dp"
        android:layout_marginTop="68dp"
        android:text="@string/IngreseNombreYFoto"
        android:textColor="@color/blueApp"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/whiteBack5"
        app:layout_constraintStart_toStartOf="@+id/whiteBack5"
        app:layout_constraintTop_toTopOf="@+id/whiteBack5" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="44dp"
        android:text="@string/Nombre"
        android:textColor="@color/blueApp"
        app:layout_constraintStart_toStartOf="@+id/whiteBack5"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:background="@color/inputBack"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="@+id/whiteBack5"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <ImageButton
        android:layout_width="179dp"
        android:layout_height="163dp"
        android:layout_marginTop="316dp"
        android:background="@color/inputBack"
        app:layout_constraintEnd_toEndOf="@+id/whiteBack5"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/whiteBack5"
        app:layout_constraintTop_toTopOf="@+id/whiteBack5"
        app:srcCompat="@mipmap/addphoto" />

</androidx.constraintlayout.widget.ConstraintLayout>